--- a/index.html
+++ b/index.html
@@ -105,7 +105,7 @@
               връзка.
             </span>
           </label>
-          <label for="news" class="flex ">
+          <label for="news" class="flex">
             <input type="checkbox" name="news" id="news" class="hidden" />
             <span class="checkbox rounded"></span>
             <span class="consent">
@@ -114,7 +114,7 @@
             </span>
           </label>
           <div class="flex end">
-            <input type="submit" value="РЕГИСТРАЦИЯ" class="green-button">
+            <input type="submit" value="РЕГИСТРАЦИЯ" class="green-button" />
           </div>
         </form>
       </div>
