Added a loading screen and renamed some images

--- a/index.html
+++ b/index.html
@@ -10,6 +10,9 @@
     <link rel="stylesheet" href="./assets/styles/index.css" />
   </head>
   <body>
+    <div id="loadingScreen" class="flex center">
+      <img src="./assets/images/preloader.gif" alt="loading screen" />
+    </div>
     <header></header>
     <main>
       <div id="registrationPage" class="main-wrapper rounded">
@@ -120,5 +123,6 @@
       </div>
     </main>
     <footer></footer>
+    <script src="./assets/script/index.js"></script>
   </body>
 </html>
