Added the lower menu in the main page and changed some classes in the index.css

--- a/index.html
+++ b/index.html
@@ -15,6 +15,50 @@
     </div>
     <header></header>
     <main>
+      <div id="homePage">
+        <div id="carousel"></div>
+        <div id="deals"></div>
+        <div id="socialContainer" class="main-wrapper">
+          <div class="red-card rounded flex column space-between">
+            <h2>PIZZA TRACKER</h2>
+            <h3>Следете поръчката си с нашия уникален Pizza Tracker!</h3>
+            <button class="black-button button rounded">ПРОСЛЕДЕТЕ ПОРЪЧКАТА СИ СЕГА!</button>
+          </div>
+          <div class="red-card rounded flex column space-between">
+            <h2>КАРИЕРИ</h2>
+            <h3>Моля попълнете формуляра</h3>
+            <button class="black-button button rounded">КАНДИДАТСТВАНЕ ЗА РАБОТА</button>
+          </div>
+          <div id="appLink" class="black-card rounded flex column space-between">
+            <h2>DOMINO'S PIZZA APP</h2>
+            <h3>
+              Поръчайте онлайн чрез безплатното ни приложение. Свалете сега тук!
+            </h3>
+            <div class="flex icon-container space-between">
+                <!-- apple and android pics -->
+                <img src="./assets/images/apple_icon.svg" alt="apple icon">
+                <span>&amp;</span>
+                <img src="./assets/images/android_icon.svg" alt="android icon">
+            </div>
+            <img src="./assets/images/iphone_new.png" alt="dominos mobile app">
+          </div>
+          <div class="darkblue-card wide-card rounded flex column space-between">
+            <h2>АБОНИРАЙТЕ СЕ ЗА НАШИЯ NEWSLETTER</h2>
+            <h3>
+              Абонирайте се за нашия newsletter и първи научавайте за горещите
+              ни оферти!
+            </h3>
+            <button class="white-button button rounded">Subscribe</button>
+          </div>
+          <div class="blue-card wide-card rounded flex column space-between">
+            <h2>ПОРЪЧАЙТЕ ПРЕЗ SKYPE</h2>
+            <h3>Поръчайте като ни се обадите през Skype!</h3>
+            <button class="transparent button">
+              <img src="./assets/images/skype_button.png" alt="Skype call" />
+            </button>
+          </div>
+        </div>
+      </div>
       <div id="registrationPage" class="main-wrapper rounded">
         <form action="">
           <h2>РЕГИСТРАЦИЯ</h2>
@@ -117,7 +161,7 @@
             </span>
           </label>
           <div class="flex end">
-            <input type="submit" value="РЕГИСТРАЦИЯ" class="green-button" />
+            <input type="submit" value="РЕГИСТРАЦИЯ" class="green-button button rounded" />
           </div>
         </form>
       </div>
