--- a/index.html
+++ b/index.html
@@ -22,27 +22,38 @@
           <div class="red-card rounded flex column space-between">
             <h2>PIZZA TRACKER</h2>
             <h3>Следете поръчката си с нашия уникален Pizza Tracker!</h3>
-            <button class="black-button button rounded">ПРОСЛЕДЕТЕ ПОРЪЧКАТА СИ СЕГА!</button>
+            <button class="black-button button rounded">
+              ПРОСЛЕДЕТЕ ПОРЪЧКАТА СИ СЕГА!
+            </button>
           </div>
           <div class="red-card rounded flex column space-between">
             <h2>КАРИЕРИ</h2>
             <h3>Моля попълнете формуляра</h3>
-            <button class="black-button button rounded">КАНДИДАТСТВАНЕ ЗА РАБОТА</button>
+            <button class="black-button button rounded">
+              КАНДИДАТСТВАНЕ ЗА РАБОТА
+            </button>
           </div>
-          <div id="appLink" class="black-card rounded flex column space-between">
+          <div
+            id="appLink"
+            class="black-card rounded flex column space-between"
+          >
             <h2>DOMINO'S PIZZA APP</h2>
             <h3>
               Поръчайте онлайн чрез безплатното ни приложение. Свалете сега тук!
             </h3>
             <div class="flex icon-container space-between">
-                <!-- apple and android pics -->
-                <img src="./assets/images/apple_icon.svg" alt="apple icon">
-                <span>&amp;</span>
-                <img src="./assets/images/android_icon.svg" alt="android icon">
+              <img src="./assets/images/apple_icon.svg" alt="apple icon" />
+              <span>&amp;</span>
+              <img src="./assets/images/android_icon.svg" alt="android icon" />
             </div>
-            <img src="./assets/images/iphone_new.png" alt="dominos mobile app">
+            <img
+              src="./assets/images/iphone_new.png"
+              alt="dominos mobile app"
+            />
           </div>
-          <div class="darkblue-card wide-card rounded flex column space-between">
+          <div
+            class="darkblue-card wide-card rounded flex column space-between"
+          >
             <h2>АБОНИРАЙТЕ СЕ ЗА НАШИЯ NEWSLETTER</h2>
             <h3>
               Абонирайте се за нашия newsletter и първи научавайте за горещите
@@ -161,7 +172,11 @@
             </span>
           </label>
           <div class="flex end">
-            <input type="submit" value="РЕГИСТРАЦИЯ" class="green-button button rounded" />
+            <input
+              type="submit"
+              value="РЕГИСТРАЦИЯ"
+              class="green-button button rounded"
+            />
           </div>
         </form>
       </div>
