Added the general html structure of the menu and a router

--- a/index.html
+++ b/index.html
@@ -75,6 +75,19 @@
           </div>
         </div>
       </div>
+      <div id="menuPage">
+        <nav></nav>
+        <div id="allDealsPage"></div>
+        <div id="allPizzasPage"></div>
+        <div id="allStartersPage"></div>
+        <div id="allChickenPage"></div>
+        <div id="allPastaPage"></div>
+        <div id="allSaladsPage"></div>
+        <div id="allSandwichPage"></div>
+        <div id="allSaucesPage"></div>
+        <div id="allDessertsPage"></div>
+        <div id="allDrinksPage"></div>
+      </div>
       <div id="registrationPage" class="main-wrapper rounded">
         <form action="">
           <h2>РЕГИСТРАЦИЯ</h2>
