created responsive navigation bar

--- a/index.html
+++ b/index.html
@@ -24,7 +24,7 @@
                             <i class="fa fa-bars"id='faIcon' style='color: #fff;'></i>
                         </a> 
                     </div>
-                    <!-- //logo -->
+                    <!-- logo -->
                     <div id='logo-wrapper' class='col-xs-6 col-md-12 padding-0'>
                             <a href='#' class='navbar-logo'><img src='./assets/images/logo-white.png' alt='dominoslogo' style=' margin: 7px 0px 19px;
                               height: 51px;
