created responsive navbar

--- a/index.html
+++ b/index.html
@@ -53,7 +53,8 @@
                                             </a>
                                          </li>
                                          <li class="show-phone">
-                                             <a class='font-bold text-center' href='#'>070012525</a>
+                                             <a class='font-bold text-center' href='#'id='telNumber'>070012525</a>
+                                             <a class='font-bold text-center' href='#'id='telText'>ОБАДЕТЕ НИ СЕ</a>
                                          </li>
                                      </ul>
                                 </li>
@@ -70,6 +71,21 @@
                                 <!-- order now -->
                                 <li>
                                     <a href='#' class='button font-bold cart-btn text-center' data-type='order'>ПОРЪЧАЙ СЕГА</a>
+                                </li>
+                                <li class='visible-resposnsive'>
+                                    <a href='#' class='font-bold'>СВЪРЖЕТЕ СЕ С НАС</a>
+                                </li>
+                                <li class='visible-resposnsive'>
+                                    <a href='#' class='font-bold'>УСЛОВИЯ ЗА ПОЛЗВАНЕ</a>
+                                </li>
+                                <li class='visible-resposnsive'>
+                                    <a href='#' class='font-bold'>РЕСТОРАНТИ</a>
+                                </li>
+                                <li class='visible-resposnsive'>
+                                    <a href='#' class='font-bold'>АЛЕРГЕНИ</a>
+                                </li>
+                                <li class='visible-resposnsive'>
+                                    <a href='#' class='font-bold'>ЗАЩИТА НА ЛИЧНИТЕ ДАННИ</a>
                                 </li>
                             </ul>
                         </div>
