--- a/index.html
+++ b/index.html
@@ -198,6 +198,9 @@
           </div>
         </form>
       </div>
+      <div id="errorPage" class="main-wrapper flex center">
+        <img id="errorImage" src="./assets/images/error404.png" alt="Page not found" />
+      </div>
     </main>
     <footer></footer>
     <script src="./assets/script/index.js"></script>
